<resources>
    <string name="app_name">Money Manager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Navigation Drawer меню -->
    <string name="nav_drawer_main">Головна</string>
    <string name="nav_drawer_expense">Записи</string>
    <string name="naw_drawer_diagrams">Діаграми</string>
    <string name="naw_drawer_planned_payments">Заплановані платежі</string>
    <string name="naw_drawer_budgets">Бюджети</string>
    <string name="naw_drawer_debts">Борги</string>
    <string name="naw_drawer_goals">Цілі</string>
    <string name="naw_drawer_groups">Спільні групи</string>'
    <string name="naw_drawer_accounts">Рахунки</string>

    <!--Текст для віджетів -->
    <string name="debt_type_text_view">Вид боргу</string>
    <string name="debt_sum_text_view">Сума</string>
    <string name="debt_receiver_text_view">Отримувач</string>
    <string name="debt_description_text_view">Опис</string>
    <string name="debt_borrow_date_text_view">Дата взяття</string>
    <string name="debt_repay_date_text_view">Дата повернення</string>
    <string name="debt_account_text_view">Рахунок</string>

    <string-array name="typeOfPayment">
        <item>Готівка</item>
        <item>Дебетова карта</item>
        <item>Кредитна карта</item>
        <item>Мобільний платіж</item>
        <item>Інтернет оплата</item>
    </string-array>

    <string-array name="planned_payment_timing">
        <item>Никогда</item>
        <item>За день до</item>
        <item>За 3 дня до</item>
        <item>За неделю до</item>
    </string-array>
    <string-array name="planned_payment_frequency">
        <item>Повторять ежедневно</item>
        <item>Повторять еженедельно</item>
        <item>Повторять ежемесячно</item>
        <item>Повторять ежегодно</item>
    </string-array>
    <string-array name="goal_state">
        <item>Активні</item>
        <item>Призупинені</item>
        <item>Досягнені</item>
    </string-array>

    <string-array name="diagram_types">
        <item>Структура витрат</item>
        <item>Структура доходів</item>
        <item>Витрати по категоріям</item>
        <item>Витрати по користувачам</item>
        <item>Дохід по користувачам</item>
    </string-array>

    <!--Витрати -->
    <string name="money_list">Записи</string>
    <string name="add_expense">Додати запис</string>
    <string name="edit_expense">Редагувати запис</string>
    <string name="expense_amount">-%1$s%2$s</string>
    <string name="income_amount">+%1$s%2$s</string>

    <!-- Борги -->
    <string name="debts">Борги</string>
    <string name="debt_payments">Оплати боргу</string>
    <string name="debt_creating">Додати борг</string>
    <string name="debt_edit">Редагування боргу</string>
    <string name="borrowed">%1$s → Я</string>
    <string name="lent">Я → %1$s</string>
    <string name="debt_remain">Залишилось: %1$s</string>
    <string name="debt_pay_date">Дата оплати: %1$s</string>
    <string name="debt_pay_confirm_message">Ви впевнені, що хочете закрити цей борг?</string>
    <string name="debt_pay_full">Так</string>
    <string name="debt_pay_part">Частково</string>
    <string name="debt_pay_cancel">Ні</string>
    <string name="debt_enter_sum_ok">ОК</string>
    <string name="debt_enter_sum_reject">Відміна</string>
    <string name="debt_repay">Оплачено</string>
    <string name="debt_is_payed_message">Цей борг уже виплачений</string>
    <string name="pay_debt">Сплатити борг</string>
    <string name="show_debt_payments">Показати сплати боргу</string>
    <string name="part_debt_payment">Часткова сплата боргу</string>
    <string name="dialog_debt_sum">Скільки ви бажаєте повернути?</string>
    <string-array name="debt_type">
        <item>Я взяв у борг</item>
        <item>Я дав у борг</item>
    </string-array>

    <!--Користувачі та групи-->
    <string name="groups">Групи</string>
    <string name="group_user_count">Кількість учасників: %1$d</string>
    <string name="group_enter_new_participant">Введіть email нового учасника групи</string>
    <string name="group_new_participant_dialog">Новий учасник</string>
    <string name="group_participant_email_ok">ОК</string>
    <string name="group_participant_email_reject">Відміна</string>
    <string name="new_group_dialog">Нова група</string>
    <string name="new_group_enter">Введіть назву нової групи</string>

    <string name="title_activity_place_choose">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Цілі -->
    <string name="goal_needed">Ціль: %1$s%2$s</string>
    <string name="goal_accumulated">Накоплено: %1$s%2$s</string>
    <string name="goal_detail_wanted_date">Дата досягнення цілі: %1$s</string>
    <string name="goal_detail_predicted_date">Спрогнозована дана досягнення цілі: %1$s від дати початку (%2$s)</string>
    <string name="goal_detail_progress">%1$s%2$s/%3$s%4$s</string>
    <string name="goal_dialog_enter_amount_title">Ввести накоплену суму</string>

    <!-- Валюти -->
    <string name="base_currency_select_item">%1$s - %2$s</string>

    <!--Покупки-->
    <string name="deselect_purchases">Зняти\nвиділення</string>
    <string name="delete_purchase_list">Видалити\nсписок</string>
    <string name="share_title_list">Потрібно купити:\n</string>
    <string name="share_purchases_item_string">*%1$s\n</string>
    <string name="purchase_note_title">[%1$s]</string>
    <string name="purchase_note_title_s">%1$s: </string>
    <string name="purchase_note_item">%1$s, </string>

    <!--Звіти -->
    <string name="report_subcategory_text">%1$s - %2$s</string>
    <string name="report_item_expense_amount">-%1$s</string>
    <string name="report_item_income_amount">+%1$s</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_add_debts">AddDebtsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">380142302464422</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb380142302464422</string>
    <string name="google_server_id">767226634872-mvoen5vkjvps3qugt7c8kvb6sc1b4rnj.apps.googleusercontent.com</string>
</resources>
