<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/nav_drawer_main" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_nav_account"
            android:title="@string/naw_drawer_accounts"/>
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_nav_list"
            android:title="Записи" />
        <item
            android:id="@+id/nav_diagrams"
            android:icon="@drawable/ic_nav_diagram"
            android:title="@string/naw_drawer_diagrams" />
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_debts"
            android:icon="@drawable/ic_nav_debt"
            android:title="@string/naw_drawer_debts" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_nav_goals"
            android:title="@string/naw_drawer_goals" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_naw_groups"
            android:title="@string/naw_drawer_groups" />
        <item
            android:id="@+id/nav_currencies"
            android:icon="@drawable/ic_nav_budgets"
            android:title="Валюти" />
        <!--<item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_nav_report"
            android:title="Звіти" />-->
        <!--<item
            android:id="@+id/nav_templates"
            android:icon="@drawable/ic_templates"
            android:title="Шаблони" />-->
        <item
            android:id="@+id/nav_budgets"
            android:icon="@drawable/ic_nav_place"
            android:title="Місця" />
        <item
            android:id="@+id/nav_purchase_list"
            android:icon="@drawable/ic_nav_purchase"
            android:title="Списки покупок" />
    </group>

</menu>
